--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,8 @@
 <resources>
     <string name="app_name">diplom</string>
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+
+    <!-- Menu strings -->
+    <string name="info">Information</string>
+    <string name="home">Home</string>
+    <string name="hello_blank_fragment">Hello</string>
 </resources>
