added detail screen with yandex map

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,11 @@
     <string name="info">Information</string>
     <string name="home">Home</string>
     <string name="hello_blank_fragment">Hello</string>
+    <string name="food">Питание</string>
+    <string name="services">Услуги</string>
+
+    <string name="not_found_error_message">Not found</string>
+    <string name="network_error_message">Network error</string>
+    <string name="remote_error_message">Remote server error</string>
+    <string name="unknown_error_message">Unknown error</string>
 </resources>
