added tour request screen

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,7 @@
     <string name="network_error_message">Network error</string>
     <string name="remote_error_message">Remote server error</string>
     <string name="unknown_error_message">Unknown error</string>
+    <string name="client_name_hint">Ваше имя</string>
+    <string name="client_phone_hint">Моб. телефон</string>
+    <string name="client_email_hint">E-mail</string>
 </resources>
