--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">diplom</string>
+    <string name="app_name">TourBox</string>
 
     <!-- Menu strings -->
     <string name="info">Information</string>
